--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 
             <div class="header">
                 <ul class="nav nav-pills pull-right" ng-repeat="item in menuItems">
-                    <li><a ng-href="{{ item.link }}">{{ item.title  }}</a></li>
+                    <li><a ng-href="#/{{ item.link }}">{{ item.title  }}</a></li>
                 </ul>
                 <h3 class="text-muted">Haus Orange</h3>
                 <p>IHR Ferienhaus in Tübingen</p>
