Adding location site -unstyled

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div class="container" ng-init="menuItems=[{'title': 'Haus Orange', 'link': 'home'}, {'title': 'Ausstattung', 'link': 'images'}]">
+        <div class="container" ng-init="menuItems=[{'title': 'Haus Orange', 'link': 'home'}, {'title': 'Ausstattung', 'link': 'images'}, {'title': 'Standort', 'link': 'location'}]">
 
             <div class="header">
                 <ul class="nav nav-pills pull-right" ng-repeat="item in menuItems">
