--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
     </head>
-    <body ng-app="hausOrangeHtmlApp">
+    <body ng-app="hausOrangeHtmlApp" class="body">
         <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -35,7 +35,7 @@
                     <p>IHR Ferienhaus in Tübingen</p>
                 </div>
 
-                <div ng-view=""></div>
+                <div class="content" ng-view=""></div>
         </div>
     </div>
 
