--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
                         <li data-path="/{{item.link}}" active-link="active"><a ng-href="#/{{ item.link }}">{{ item.title  }}</a></li>
                     </ul>
                     <h3 class="text-muted">Haus Orange</h3>
-                    <p>IHR Ferienhaus in Tübingen</p>
+                    <p>IHR Ferienhaus in Tübingen  <span style="margin-left:15px;">(belegt bis Ende 2014)</span></p>
                 </div>
 
                 <div class="content" ng-view=""></div>
